objects/SCP_Certa_GC__SCP_Criteria_DCM__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Approach__c</fullName>
        <label>Approach</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Competitor_Standing__c</fullName>
        <formula>IF(ISPICKVAL( SCP_Certa_GC__Customer_Consideration__c , &quot;HIGH&quot;)
, IF (ISPICKVAL(  SCP_Certa_GC__Competitors_Competitive_Standing__c  ,&quot;HIGH&quot;), &quot;VW&quot;, &quot;VK&quot;)
, IF (ISPICKVAL(  SCP_Certa_GC__Competitors_Competitive_Standing__c  ,&quot;HIGH&quot;), &quot;VS&quot;, &quot;NV&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor&apos;s Standing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Competitors_Competitive_Standing__c</fullName>
        <label>Competitors Competitive Standing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Criteria__c</fullName>
        <label>Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Customer_Consideration__c</fullName>
        <label>Customer Consideration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <default>true</default>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Our_Competitive_Standing__c</fullName>
        <label>Our Competitive Standing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <default>true</default>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Our_Standing__c</fullName>
        <formula>IF(ISPICKVAL( SCP_Certa_GC__Customer_Consideration__c , &quot;HIGH&quot;)
, IF (ISPICKVAL( SCP_Certa_GC__Our_Competitive_Standing__c ,&quot;HIGH&quot;), &quot;VW&quot;, &quot;VK&quot;)
, IF (ISPICKVAL( SCP_Certa_GC__Our_Competitive_Standing__c ,&quot;HIGH&quot;), &quot;VS&quot;, &quot;NV&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Our Standing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__SCP_Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SCP Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SCP Criteria DCM</relationshipLabel>
        <relationshipName>SCP_Criteria_DCM</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SCP Criteria DCM</label>
    <listViews>
        <fullName>SCP_Certa_GC__All</fullName>
        <columns>NAME</columns>
        <columns>SCP_Certa_GC__Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nombre de SCP Criteria DCM</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCP Criteria DCM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>